<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourite">Favourite</string>
    <string name="about_app">About App</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragmentation">Dashboard Fragmentation</string>
    <string name="favourites_fragmentation">Favourites_fragmentation</string>
    <string name="profile_fragmentation">Profile Fragmentation</string>
    <string name="about_app_fragmentation">About App Fragmentation</string>
    <string name="vishesh_panghal">Vishesh panghal</string>
    <string name="android_devloper">Android Devloper</string>
    <string name="contact_us">Contact Us</string>
    <string name="email">Email: visheshpanghal12@gmail.com</string>
    <string name="address">House No. 622/33, Jhawar Nagar, Hisar Haryana,India(125001)</string>
    <string name="phone">Phone: +91 9306078820</string>
    <string name="feedback_share">Share your Feedback</string>
    <string name="share">Share</string>
    <string name="_2022_book_hub">©2022 Book Hub</string>
    <string name="anything">Feel Free:</string>
    <string name="listitems">ListItems</string>
    <string name="check_internet">Check Internet</string>
    <string name="book_hub">Book Hub</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_user_name">Email or User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name">Name</string>
    <string name="entre_email">Email</string>
    <string name="Entre_phone">Phone</string>
    <string name="conform_password">Conform Password</string>
    <string name="Book_hub_Preference">Book Hub Preference</string>
    <string name="send_otp">Send Otp</string>
    <string name="login">Login</string>
    <string name="name_of_book">Name of Book</string>
    <string name="name_of_author">Name of Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_3">4.3</string>
    <string name="about_the_book">About The Book</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="_4_5">4.5</string>
    <string name="p_s_i_love_you">P.S I love you</string>
    <string name="biblio">BIBLIO</string>
    <string name="Remove_from_favourites">Remove from favourites</string>
    <string name="Add_to_favourites">Add to favourites</string>
    <string name="action_sort">action_sort</string>
</resources>