<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <TextView
        android:id="@+id/bookHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="105dp"
        android:text="@string/biblio"
        android:textColor="@color/pink"
        android:textSize="45sp"
        android:textStyle="bold|italic|normal" />

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/switch_tumbs"
                android:gravity="center"
                android:orientation="horizontal"
                android:text="@string/register_yourself"
                android:textColor="#000000"
                android:textSize="28sp"
                android:textStyle="bold|normal"
                android:weightSum="2" />

            <LinearLayout
                android:id="@+id/logInLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="25dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/name"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="10dp"
                    app:shapeAppearanceOverlay="@style/Button4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/entre_email"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="10dp"
                    app:shapeAppearanceOverlay="@style/Button4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/Entre_phone"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="10dp"
                    app:shapeAppearanceOverlay="@style/Button4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="10dp"
                    app:shapeAppearanceOverlay="@style/Button4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:hint="@string/conform_password"
                    app:boxStrokeColor="#4E4A4A"
                    app:boxStrokeWidth="10dp"
                    app:shapeAppearanceOverlay="@style/Button4" />
            </LinearLayout>

            <Button
                android:id="@+id/singUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/pink"
                android:elevation="15dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/RegLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="430dp"
            android:layout_marginBottom="12dp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="normal" />

    </androidx.cardview.widget.CardView>
</LinearLayout>